# llm_mesh

./: .gitignore  CLAUDE.md  fetch_chapters.py  main.py  pyproject.toml  story.txt
src/translate/: main.py  translate_signature.py
src/translation_chunker/: __init__.py  main.py  models.py  simple_boundary_optimizer.py  simple_token_manager.py  text_chunker.py
